Exit page confirmation, scrollbar edits, fix space

--- a/inner/langs/style.css
+++ b/inner/langs/style.css
@@ -69,19 +69,31 @@ p {
     -webkit-box-sizing:border-box;
     -moz-box-sizing:border-box;
     box-sizing:border-box;
-    width: 100%;
-    height: 100%;
+    min-width: 100%;
+    min-height: 100%;
+    max-width:100%;
+    max-height:100%;
+    width:0px;
+    height: 0px;
     background-color: #222222;
     border:none;
     color:#FFCCDD;
     overflow:hidden;
     overflow-y:auto;
-    scrollbar-color: #FFCCDD #441526;
-    scrollbar-width:thin;
 
     font-family:'Courier New', Courier, monospace;
     font-weight:normal;
     font-size: 16px;
+}
+
+::-webkit-scrollbar {
+    height:12px;
+    width:6px;
+    background: #441526;
+}
+
+::-webkit-scrollbar-thumb {
+    background: #FFCCDD;
 }
 
 .disabled {
